# zulip-standup-bot

./: .aiignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  admin_commands.py  ai_summary.py  backup_manager.py  botserverrc.example  captain-definition  config.py  docker-compose.dev.yml  docker-compose.standup.yml  docker-compose.yml  email_service.py  error_handler.py  generate_botrc.py  health_check.py  init_database.py  main.py  monitoring.py  pyproject.toml  rate_limiter.py  reminder_service.py  report_generator.py  requirements.txt  response_collector.py  run_bot.py  run_standup_bot.py  schedule_adapter.py  schedule_engine.py  scheduler.py  setup.py  (+15 more)
.github/workflows/: caprover-deploy.yml  deploy.yml  docker-publish.yml
.junie/: guidelines.md  project-plan.md
docs/: data-persistence.md
scripts/: init.sql  start.sh
zulip_bots/: MANIFEST.in  __init__.py
zulip_bots/bots/standup/: database.py  standup.py
zulip_bots/zulip_bots/bots/helloworld/: test_helloworld.py
zulip_bots/zulip_bots/bots/incrementor/: incrementor.py
zulip_bots/zulip_bots/bots/standup/: README.md  ai_summary.py  config.py  database.py  requirements.txt  standup.py  test_standup.py
zulip_botserver/zulip_botserver/: server.py
zulip_botserver/zulip_botserver.egg-info/: PKG-INFO
