[project]
name = "standup-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.78.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "zulip>=0.9.0",
    "zulip-bots>=0.9.0",
    "zulip-botserver>=0.9.0",
]
