[project]
name = "standup-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.78.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "zulip>=0.9.0",
    "zulip-bots>=0.9.0",
    "zulip-botserver>=0.9.0",
    "psutil>=5.9.5",
    "sqlalchemy>=2.0.41",
    "pytz>=2025.2",
    "holidays>=0.72",
    "importlib-metadata>=8.7.0",
    "tiktoken>=0.9.0",
    "markdown>=3.8",
    "typing>=3.10.0.0",
    "psycopg2-binary>=2.9.10",
]
